Update local-dir for FTP deployment
Change local directory for deployment to 'publish/'

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,4 +19,4 @@ jobs:
           server: ${{ secrets.SOMEE_FTP_SERVER }}
           username: ${{ secrets.SOMEE_FTP_USERNAME }}
           password: ${{ secrets.SOMEE_FTP_PASSWORD }}
-          local-dir: .   # deploy toàn bộ repo (index.html, css, js...)
+          local-dir: ./publish/
