--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,4 +19,5 @@ jobs:
           server: ${{ secrets.SOMEE_FTP_SERVER }}
           username: ${{ secrets.SOMEE_FTP_USERNAME }}
           password: ${{ secrets.SOMEE_FTP_PASSWORD }}
-          local-dir: ./publish/
+          local-dir: './'
+          server-dir: '/www.thanhhuy.somee.com/'
