--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,23 @@
-name: Deploy static site to Somee
+name: Deploy to somee via FTP
 
 on:
   push:
-    branches:
-      - main
+    branches: ["main"]
 
 jobs:
-  deploy:
+  ftp-deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout source code
-        uses: actions/checkout@v3
+      - name: Checkout source
+        uses: actions/checkout@v4
 
-      - name: Deploy via FTP to Somee
-        uses: SamKirkland/FTP-Deploy-Action@v4.3.0
+      - name: Deploy via FTP
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.6
         with:
-          server: ${{ secrets.SOMEE_FTP_SERVER }}
+          server: http://thanhhuy.somee.com/
           username: ${{ secrets.SOMEE_FTP_USERNAME }}
           password: ${{ secrets.SOMEE_FTP_PASSWORD }}
-          local-dir: './'
-          server-dir: '/www.thanhhuy.somee.com/'
+          port: 21
+          protocol: ftp
+          local-dir: './'                        # thư mục bạn muốn upload
+          server-dir: '/www.thanhhuy.somee.com/'    # QUAN TRỌNG: path somee yêu cầu
